--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
 
-  <title>HTML5 Template</title>
+  <title>Dimension Assets</title>
   <meta name="description" content="HTML5 Template">
 
 </head>
