Added title and body paragraph

--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,13 @@
 
   <title>Dimension Assets</title>
   <meta name="description" content="HTML5 Template">
-
+ 
 </head>
 
 <body>
-
+    <p>Dimension Assets</p>
+    <p>Are you an independent game developer looking to bring your game's graphics to the next level? 
+    Dimension Assets we can provide your game with the original assets it needs, at an affordable price. 
+    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide.</p>
 </body>
 </html>
