--- a/index.htm
+++ b/index.htm
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <p>Dimension Assets</p>
-    <p>Are you an independent game developer looking to bring your game's graphics to the next level? 
-    Dimension Assets we can provide your game with the original assets it needs, at an affordable price. 
-    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide.</p>
+    <h1>Dimension Assets</h1>
+   
+     <pre>
+        Are you an independent game developer looking to bring your game's graphics to the next level? 
+    Dimension Assets can provide your game with the original assets it needs, at an affordable price. 
+    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide.
+    </pre>
 </body>
 </html>
