--- a/index.htm
+++ b/index.htm
@@ -11,11 +11,12 @@
 
 <body>
     <h1>Dimension Assets</h1>
-   
-     <pre>
+    <blockquote>
+        <pre>
         Are you an independent game developer looking to bring your game's graphics to the next level? 
     Dimension Assets can provide your game with the original assets it needs, at an affordable price. 
     Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide.
     </pre>
+    </blockquote>
 </body>
 </html>
