--- a/index.htm
+++ b/index.htm
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-    <h1>Dimension Assets</h1>
+   
     <blockquote>
-        <pre>
-        Are you an independent game developer looking to bring your game's graphics to the next level? 
-    Dimension Assets can provide your game with the original assets it needs, at an affordable price. 
-    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide.
-    </pre>
+        <h1>Dimension Assets</h1>
+        <p>
+        Are you an independent game developer looking to bring your game's graphics to the next level? <br />
+    Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
+    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide. <br />
+    </p>
     </blockquote>
 </body>
 </html>
