--- a/index.htm
+++ b/index.htm
@@ -12,12 +12,15 @@
 <body>
    
     <blockquote>
+        
         <h1>Dimension Assets</h1>
-        <p>
-        Are you an independent game developer looking to bring your game's graphics to the next level? <br />
-    Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
-    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide. <br />
-    </p>
+        <strong>
+            <p>
+                Are you an independent game developer looking to bring your game's graphics to the next level? <br />
+                Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
+                Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide. <br />
+            </p>
+        </strong>
     </blockquote>
 </body>
 </html>
