--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,10 @@
 <body>
    
     <blockquote>
-        
-        <h1>Dimension Assets</h1>
+        <header>
+            <h1>Dimension Assets</h1>
+            <h3>Next Generation Game Assets</h3>
+        </header>
        <hr />
             <p>
                 <em>
