--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
    
     <blockquote>
         <header>
-            <h1>Dimension Assets</h1> <br />
+            <h1>Dimension Assets</h1>
             <h3>Next Generation Game Assets</h3>
         </header>
        <hr />
