--- a/index.htm
+++ b/index.htm
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-   
+   <img src= "images/indexbackground.jpg" height= "1080" width= "1920" />
     <blockquote>
-        <header>
-            <h1>Dimension Assets</h1>
-            <h3>Next Generation Game Assets</h3>
-        </header>
+            <header>
+                <h1>Dimension Assets</h1>
+                <h3>Next Generation Game Assets</h3>
+            </header>
        <hr />
             <p>
                 <em>
