--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-   
+    <img src="images/logo.jpg" height="256" width="870" />
     <blockquote>
             <header>
                 <h1>Dimension Assets</h1>
