--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
                 </em>
             </p>
         <hr />
-        <img src="images/indexbackground.jpg" height="1080" width="1920" />
+        <backgroung-img src="images/indexbackground.jpg" height="1080" width="1920" />
     </blockquote>
 </body>
 </html>
