--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+    <style type="text/css">
+        body {
+            background-image: url(images/indexbackground.jpg);
+            background-size: 1920px 1080px;
+        }
+        p {
+            margin-left: 30px;
+            margin-right: 30px;
+            margin-top: 30px;
+            font-size: 1.1em;
+        }
+    </style>
 
   <title>Dimension Assets</title>
   <meta name="description" content="HTML5 Template">
