--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,14 @@
         body {
             background-image: url(images/indexbackground.jpg);
             background-size: 1920px 1080px;
+           
         }
         p {
             margin-left: 30px;
             margin-right: 30px;
             margin-top: 30px;
             font-size: 1.1em;
+            align-content: center;
         }
     </style>
 
