--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,6 @@
             margin-right: 30px;
             margin-top: 30px;
             font-size: 1.1em;
-            align-content: center;
         }
     </style>
 
@@ -31,7 +30,7 @@
                 <h3>Next Generation Game Assets</h3>
             </header>
        <hr />
-            <p>
+            <p style="text-align:right">
                 <em>
                     Are you an independent game developer looking to bring your game's graphics to the next level? <br />
                     Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
