--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
                 <h3>Next Generation Game Assets</h3>
             </header>
        <hr />
-            <p style="text-align:right">
+            <p style="text-align:center">
                 <em>
                     Are you an independent game developer looking to bring your game's graphics to the next level? <br />
                     Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
