--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
 <body>
     <img src="images/logo.jpg" height="128" width="435" />
     <blockquote>
-            <header>
+            <header style="text-align:center">
                 <h1>Dimension Assets</h1>
                 <h3>Next Generation Game Assets</h3>
             </header>
