--- a/index.htm
+++ b/index.htm
@@ -25,9 +25,9 @@
 <body>
     <img src="images/logo.jpg" height="128" width="435" />
     <blockquote>
-            <header style="text-align:center">
-                <h1>Dimension Assets</h1>
-                <h3>Next Generation Game Assets</h3>
+            <header>
+                <h1 style="text-align:center">Dimension Assets</h1>
+                <h3 style="text-align:center">Next Generation Game Assets</h3>
             </header>
        <hr />
             <p style="text-align:center">
