--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <img src="images/logo.jpg" height="128" width="435" />
+    <img src="images/logo.png" height="128" width="435" />
     <blockquote>
             <header>
                 <h1 style="text-align:center">Dimension Assets</h1>
