--- a/index.htm
+++ b/index.htm
@@ -6,14 +6,20 @@
     <style type="text/css">
         body {
             background-image: url(images/indexbackground.jpg);
-            background-size: 1920px 1080px;
-           
+            background-size: 1920px 1080px;   
         }
         p {
             margin-left: 30px;
             margin-right: 30px;
             margin-top: 30px;
-            font-size: 1.1em;
+            font-size: 1.2em;
+            color:darkgray;
+        }
+        h1{
+            color:white;
+        }
+        h3{
+            color:darkgray;
         }
     </style>
 
