--- a/index.htm
+++ b/index.htm
@@ -13,13 +13,13 @@
             margin-right: 30px;
             margin-top: 30px;
             font-size: 1.2em;
-            color:darkgray;
+            color:white;
         }
         h1{
             color:white;
         }
         h3{
-            color:darkgray;
+            color:white;
         }
     </style>
 
