--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,15 @@
             background-image: url(images/indexbackground.jpg);
             background-size: 1920px 1080px;   
         }
-        p {
+        p.major {
+            margin-left: 30px;
+            margin-right: 30px;
+            margin-top: 30px;
+            font-size: 1.7em;
+            color:white;
+            font-family: Tahoma;
+        }
+        p.minor {
             margin-left: 30px;
             margin-right: 30px;
             margin-top: 30px;
@@ -17,6 +25,7 @@
         }
         h1{
             color:white;
+
         }
         h3{
             color:white;
@@ -37,7 +46,7 @@
                 <h3 style="text-align:center">Next Generation Game Assets</h3>
             </header>
        <hr />
-            <p style="text-align:center">
+            <p class="major" style="text-align:center">
                 <em>
                     Are you an independent game developer looking to bring your game's graphics to the next level? <br />
                     Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
