--- a/index.htm
+++ b/index.htm
@@ -25,11 +25,8 @@
         }
         h1{
             color:white;
-
-        }
-        h3{
-            color:white;
-            font-size: 3em;
+            font-size: 2em;
+            font-family: Tahoma;
         }
     </style>
 
@@ -42,8 +39,7 @@
     <img src="images/logo.png" height="128" width="435" />
     <blockquote>
             <header>
-                <h1 style="text-align:center">Dimension Assets</h1>
-                <h3 style="text-align:center">Next Generation Game Assets</h3>
+                <h1 style="text-align:center">Dimension Assets<br />Next Generation Game Assets</h1>
             </header>
        <hr />
             <p class="major" style="text-align:center">
