--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,11 @@
             font-size: 2em;
             font-family: Tahoma;
         }
+         h3{
+            color:white;
+            font-size: 1em;
+            font-family: Tahoma;
+        }
     </style>
 
   <title>Dimension Assets</title>
@@ -39,7 +44,8 @@
     <img src="images/logo.png" height="128" width="435" />
     <blockquote>
             <header>
-                <h1 style="text-align:center">Dimension Assets<br />Next Generation Game Assets</h1>
+                <h1 style="text-align:center">Dimension Assets</h1>
+                <h3 style="text-align:center">-Next Generation Game Assets-</h3>
             </header>
        <hr />
             <p class="major" style="text-align:center">
