--- a/index.htm
+++ b/index.htm
@@ -24,13 +24,13 @@
             color:white;
         }
         h1{
-            color:white;
+            color:lightgray;
             font-size: 2em;
             font-family: Tahoma;
         }
          h3{
-            color:white;
-            font-size: 1em;
+            color:lightgray;
+            font-size: 1.5em;
             font-family: Tahoma;
         }
     </style>
