--- a/index.htm
+++ b/index.htm
@@ -24,9 +24,9 @@
             color:white;
         }
         h1{
-            color:lightgray;
+            color:white;
             font-size: 2em;
-            font-family: Tahoma;
+            font-family: spaceman;
         }
          h3{
             color:lightgray;
@@ -45,7 +45,7 @@
     <blockquote>
             <header>
                 <h1 style="text-align:center">Dimension Assets</h1>
-                <h3 style="text-align:center">-Next Generation Game Assets-</h3>
+                <h3 style="text-align:center">Next Generation Game Assets</h3>
             </header>
        <hr />
             <p class="major" style="text-align:center">
