--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
             margin-top: 30px;
             font-size: 1.7em;
             color:white;
-            font-family: Tahoma;
+            font-family: Verdana, Helvetica, sans-serif;
         }
         p.minor {
             margin-left: 30px;
@@ -26,12 +26,12 @@
         h1{
             color:white;
             font-size: 2em;
-            font-family: spaceman;
+            font-family: spaceman, Verdana, Helvetica, sans-serif;
         }
          h3{
             color:lightgray;
             font-size: 1.5em;
-            font-family: Tahoma;
+            font-family: Verdana, Helvetica, sans-serif;
         }
     </style>
 
