--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
             font-family: spaceman, Verdana, Helvetica, sans-serif;
         }
          h3{
-            color:lightgray;
+            color:white;
             font-size: 1.5em;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -45,16 +45,21 @@
     <blockquote>
             <header>
                 <h1 style="text-align:center">Dimension Assets</h1>
-                <h3 style="text-align:center">Next Generation Game Assets</h3>
             </header>
-       <hr />
+      
             <p class="major" style="text-align:center">
                 <em>
-                    Are you an independent game developer looking to bring your game's graphics to the next level? <br />
-                    Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
-                    Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide. <br />
+                   Next Generation Game Assets
                 </em>
             </p>
+        <hr />
+        <p class="major" style="text-align:center">
+            <em>
+                Are you an independent game developer looking to bring your game's graphics to the next level? <br />
+                Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
+                Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide. <br />
+            </em>
+        </p>
         <hr />
     </blockquote>
 </body>
