--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
         h1{
             color:white;
             font-size: 2.7em;
-            font-family: spaceman, Verdana, Helvetica, sans-serif;
+            font-family: Verdana, Helvetica, sans-serif;
         }
          h3{
             color:white;
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <img src="images/logo.png" height="64" width="217" />
+    <img src="images/logo.png" height="96" width="330" />
     <blockquote>
             <header>
                 <h1 style="text-align:center">Dimension Assets</h1>
