--- a/index.htm
+++ b/index.htm
@@ -41,10 +41,11 @@
 </head>
 
 <body>
-    <img src="images/logo.png" height="96" width="330" />
+   
     <blockquote>
             <header>
-                <h1 style="text-align:center">Dimension Assets</h1>
+                <img style="align-content:center" src="images/logo.png" height="96" width="330" />
+               
             </header>
       
             <p class="major" style="text-align:center">
