--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
     <style type="text/css">
-        body {
+       img{align-content:center}
+         body {
             background-image: url(images/indexbackground.jpg);
             background-size: 1920px 1080px;   
         }
@@ -44,7 +45,7 @@
    
     <blockquote>
             <header>
-                <img style="align-content:center" src="images/logo.png" height="96" width="330" />
+                <img src="images/logo.png" height="96" width="330" />
                
             </header>
       
