--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
     <style type="text/css">
-       img{align-content:center}
          body {
             background-image: url(images/indexbackground.jpg);
             background-size: 1920px 1080px;   
@@ -45,8 +44,9 @@
    
     <blockquote>
             <header>
-                <img src="images/logo.png" height="96" width="330" />
-               
+                <p style="text-align:center;">
+                    <img src="images/logo.png" height="96" width="330" />
+                </p>
             </header>
       
             <p class="major" style="text-align:center">
