--- a/index.htm
+++ b/index.htm
@@ -17,11 +17,7 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         p.minor {
-            margin-left: 30px;
-            margin-right: 30px;
             margin-top: 30px;
-            font-size: 1.7em;
-            color:white;
         }
         h1{
             color:white;
@@ -44,7 +40,7 @@
    
     <blockquote>
             <header>
-                <p style="text-align:center;">
+                <p class="minor" style="text-align:center">
                     <img src="images/logo.png" height="96" width="330" />
                 </p>
             </header>
