--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-   
+    <img src="images/logo2.png" height="256" width="256" />
     <blockquote>
             <header>
                 <p class="minor" style="text-align:center">
