--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
             <em>
                 Are you an independent game developer looking to bring your game's graphics to the next level? <br />
                 Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
-                Cel-shaded? Retro? Stylized? Realistic? Whichever style of assets you are looking for, Dimension Assets can provide. <br />
+                Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
             </em>
         </p>
         <hr />
