--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
         <hr />
         <p class="major" style="text-align:center">
             <em>
-                Are you an independent game developer looking to bring your game's graphics to the next level? <br />
+                Are you an independent game developer looking to take your game's graphics to the next level? <br />
                 Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
                 Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
             </em>
