--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
             margin-left: 30px;
             margin-right: 30px;
             margin-top: 1px;
+             margin-bottom: 1px;
             font-size: 1.5em;
             color:white;
             font-family: Verdana, Helvetica, sans-serif;
