--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
         }
         p.minor {
             margin-top: 1px;
+             margin-bottom: 30px;
         }
         h1{
             color:white;
@@ -38,9 +39,9 @@
 </head>
 
 <body>
-    <img src="images/logo2.png" height="128" width="128" />
+   
     <blockquote>
-            <p class="major" style="text-align:center">
+            <p class="minor" style="text-align:center">
                 <img src="images/logo.png" height="255" width="768" /> <br/>
             </p>
         <hr />
@@ -53,5 +54,9 @@
         </p>
         <hr />
     </blockquote>
+
+    <p class="major" style="text-align:right">
+        <img src="images/logo.png" height="255" width="768" /> <br />
+    </p>
 </body>
 </html>
