--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
     </blockquote>
 
     <p class="major" style="text-align:right">
-        <img src="images/logo.png" height="255" width="768" /> <br />
+        <img src="images/logo2.png" height="255" width="768" /> <br />
     </p>
 </body>
 </html>
