--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,8 @@
      
          body {
             background-image: url(images/indexbackground.jpg);
-            background-size: 1920px 1080px;   
+            background-repeat: no-repeat;
+            background-size: cover;   
         }
         p.major {
             margin-left: 30px;
