--- a/packages.htm
+++ b/packages.htm
@@ -27,7 +27,12 @@
 
         h1 {
             color: white;
-            font-size: 2.7em;
+           
+            font-family: Verdana, Helvetica, sans-serif;
+        }
+          h2 {
+            color: white;
+           
             font-family: Verdana, Helvetica, sans-serif;
         }
 
@@ -46,10 +51,10 @@
 <body>
 
     <blockquote>
-        <h1>
+        <h1 style="text-align:center">
             Dimension Assets
         </h1>
-        <h2>
+        <h2 style="text-align:center">
             Packages
         </h2>
         <p class="minor" style="text-align:center">
