--- a/index.htm
+++ b/index.htm
@@ -41,10 +41,10 @@
 </head>
 
 <body>
-   <a href="assets.htm">
+   <a href="assets.htm"  style="text-align:center">
        Assets
    </a>
-    <a href="packages.htm">
+    <a href="packages.htm"  style="text-align:center">
        Packages
     </a>
     <blockquote>
