--- a/assets.htm
+++ b/assets.htm
@@ -48,7 +48,9 @@
 </head>
 
 <body>
-
+    <a href="index.htm" style="text-align:center">
+        Home
+    </a>
     <blockquote>
         <h1 style="text-align:center">
             Dimension Assets
