--- a/packages.htm
+++ b/packages.htm
@@ -49,7 +49,9 @@
 </head>
 
 <body>
-
+    <a href="index.htm" style="text-align:center">
+        Home
+    </a>
     <blockquote>
         <h1 style="text-align:center">
             Dimension Assets
