--- a/packages.htm
+++ b/packages.htm
@@ -49,9 +49,8 @@
 </head>
 
 <body>
-    <a href="index.htm" style="text-align:center">
-        Home
-    </a>
+    <a> href="index.htm" style="text-align:center"<p style="text-align:center">Home</p> </a>
+        
     <blockquote>
         <h1 style="text-align:center">
             Dimension Assets
