--- a/packages.htm
+++ b/packages.htm
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <a> href="index.htm" style="text-align:center"<p style="text-align:center">Home</p> </a>
+    <a href="index.htm"><p style="text-align:center">Home</p> </a>
         
     <blockquote>
         <h1 style="text-align:center">
