--- a/index.htm
+++ b/index.htm
@@ -41,12 +41,8 @@
 </head>
 
 <body>
-   <a href="assets.htm"  style="text-align:center">
-       Assets
-   </a>
-    <a href="packages.htm"  style="text-align:center">
-       Packages
-    </a>
+    <a href="assets.htm"><p style="text-align:center">Assets</p> </a>
+    <a href="packages.htm"><p style="text-align:center">Packages</p> </a>
     <blockquote>
             <p class="minor" style="text-align:center">
                 <img src="images/logo.png" height="170" width="507" /> <br/>
