--- a/assets.htm
+++ b/assets.htm
@@ -24,7 +24,10 @@
             margin-top: 60px;
             margin-bottom: 25px;
         }
-
+         a{
+            color: white;
+            font-size: 1.5em;
+        }
         h1 {
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
@@ -48,9 +51,7 @@
 </head>
 
 <body>
-    <a href="index.htm" style="text-align:center">
-        Home
-    </a>
+    <a href="index.htm"><p style="text-align:center">Home</p> </a>
     <blockquote>
         <h1 style="text-align:center">
             Dimension Assets
