--- a/packages.htm
+++ b/packages.htm
@@ -25,6 +25,10 @@
             margin-bottom: 25px;
         }
 
+        a{
+            color: white;
+            font-size: 1.5em;
+        }
         h1 {
             color: white;
            
