--- a/assets.htm
+++ b/assets.htm
@@ -25,8 +25,8 @@
             margin-bottom: 25px;
         }
          a{
-            color: white;
-            font-size: 1.5em;
+            color: gray;
+            font-size: 1.2em;
         }
         h1 {
             color: white;
