--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,10 @@
             margin-top: 60px;
              margin-bottom: 25px;
         }
+        a{
+            color: grey;
+            font-size: 1.2em;
+        }
         h1{
             color:white;
             font-size: 2.7em;
