--- a/packages.htm
+++ b/packages.htm
@@ -26,8 +26,8 @@
         }
 
         a{
-            color: white;
-            font-size: 1.5em;
+            color: gray;
+            font-size: 1.2em;
         }
         h1 {
             color: white;
