--- a/assets.htm
+++ b/assets.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <style type="text/css">
         body {
-            background-image: url(images/indexbackground.jpg);
+            background-image: url(images/indexbackground2.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }
