--- a/index.htm
+++ b/index.htm
@@ -45,8 +45,8 @@
 </head>
 
 <body>
-    <a href="assets.htm"><p style="text-align:center">Assets</p> </a>
-    <a href="packages.htm"><p style="text-align:center">Packages</p> </a>
+    <a href="assets.htm"><span style="text-align:center">Assets</span> </a>
+    <a href="packages.htm"><span style="text-align:center">Packages</span> </a>
     <blockquote>
             <p class="minor" style="text-align:center">
                 <img src="images/logo.png" height="170" width="507" /> <br/>
