--- a/assets.htm
+++ b/assets.htm
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-    <a href="index.htm"><p style="text-align:center">Home</p> </a>
+    <a href="index.htm"><span style="text-align:center">Home</span> </a>
     <blockquote>
         <h1 style="text-align:center">
             Dimension Assets
