--- a/index.htm
+++ b/index.htm
@@ -45,8 +45,11 @@
 </head>
 
 <body>
-    <a href="assets.htm"><span style="text-align:center">Assets</span> </a>
-    <a href="packages.htm"><span style="text-align:center">Packages</span> </a>
+    <div style="text-align:center">
+        <a href="assets.htm">Assets </a>
+        <a href="packages.htm">Packages </a>
+    </div>
+    
     <blockquote>
             <p class="minor" style="text-align:center">
                 <img src="images/logo.png" height="170" width="507" /> <br/>
