--- a/packages.htm
+++ b/packages.htm
@@ -53,7 +53,9 @@
 </head>
 
 <body>
-    <a href="index.htm"><span style="text-align:center">Home</span> </a>
+    <div style="text-align:center">
+        <a href="index.htm">Home </a>
+    </div>
         
     <blockquote>
         <h1 style="text-align:center">
