--- a/assets.htm
+++ b/assets.htm
@@ -25,7 +25,7 @@
             margin-bottom: 25px;
         }
          a{
-            color: gray;
+            color: lightgray;
             font-size: 1.2em;
         }
         h1 {
