--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
              margin-bottom: 30px;
         }
         a{
-            color: grey;
+            color: lightgray;
             font-size: 1.2em;
         }
         h1{
