--- a/packages.htm
+++ b/packages.htm
@@ -26,7 +26,7 @@
         }
 
         a{
-            color: gray;
+            color: lightgray;
             font-size: 1.2em;
         }
         h1 {
