--- a/assets.htm
+++ b/assets.htm
@@ -52,7 +52,7 @@
 
 <body>
     <div style="text-align:center">
-        <a href="index.htm">Home </a>
+        <a href="index.htm">-Home- </a>
     </div>
     <blockquote>
         <h1 style="text-align:center">
