--- a/index.htm
+++ b/index.htm
@@ -46,8 +46,8 @@
 
 <body>
     <div style="text-align:center">
-        <a href="assets.htm">Assets </a>
-        <a href="packages.htm">Packages </a>
+        <a href="assets.htm">-Assets- </a>
+        <a href="packages.htm">-Packages- </a>
     </div>
     
     <blockquote>
