--- a/packages.htm
+++ b/packages.htm
@@ -64,8 +64,14 @@
         <h2 style="text-align:center">
             Packages
         </h2>
-        <p class="minor" style="text-align:center">
-
+        <p class="major" style="text-align:center">
+            <table>
+                <tr>
+                    <th>Small Assets</th>
+                    <th>Large Assets</th>
+                    <th>Complete Levels</th>
+                </tr>
+            </table>
         </p>
 
     </blockquote>
