--- a/packages.htm
+++ b/packages.htm
@@ -45,6 +45,12 @@
             font-size: 1.5em;
             font-family: Verdana, Helvetica, sans-serif;
         }
+        table{
+
+            text-align:center;
+            color: white;
+            font-family: Verdana, Helvetica, sans-serif;
+        }
     </style>
 
     <title>Dimension Assets</title>
@@ -64,15 +70,15 @@
         <h2 style="text-align:center">
             Packages
         </h2>
-        <p class="major" style="text-align:center">
-            <table>
-                <tr>
-                    <th>Small Assets</th>
-                    <th>Large Assets</th>
-                    <th>Complete Levels</th>
-                </tr>
-            </table>
-        </p>
+
+        <table>
+             <tr>
+                 <th>Small Assets</th>
+                 <th>Large Assets</th>
+                 <th>Complete Levels</th>
+             </tr>
+        </table>
+       
 
     </blockquote>
 </body>
