--- a/packages.htm
+++ b/packages.htm
@@ -70,16 +70,17 @@
         <h2 style="text-align:center">
             Packages
         </h2>
+        <hr />
+        <div style="text-align:center">
+            <table>
+                <tr>
+                    <th colspan="3">Small Assets</th>
+                    <th colspan="3">Large Assets</th>
+                    <th colspan="3">Complete Levels</th>
+                </tr>
+            </table>
+         </div>
 
-        <table>
-             <tr>
-                 <th>Small Assets</th>
-                 <th>Large Assets</th>
-                 <th>Complete Levels</th>
-             </tr>
-        </table>
-       
-
-    </blockquote>
+</blockquote>
 </body>
 </html>
