--- a/packages.htm
+++ b/packages.htm
@@ -30,11 +30,13 @@
             font-size: 1.2em;
         }
         h1 {
+             margin-top: 30px;
             color: white;
            
             font-family: Verdana, Helvetica, sans-serif;
         }
           h2 {
+               margin-top: 60px;
             color: white;
            
             font-family: Verdana, Helvetica, sans-serif;
