--- a/packages.htm
+++ b/packages.htm
@@ -48,8 +48,8 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         table{
-
-            text-align:center;
+            margin-left: auto;
+             margin-right: auto;
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -73,7 +73,7 @@
             Packages
         </h2>
         <hr />
-        <div style="text-align:center">
+       
             <table>
                 <tr>
                     <th colspan="3">Small Assets</th>
@@ -81,7 +81,7 @@
                     <th colspan="3">Complete Levels</th>
                 </tr>
             </table>
-         </div>
+         
 
 </blockquote>
 </body>
