--- a/packages.htm
+++ b/packages.htm
@@ -76,9 +76,17 @@
        
             <table>
                 <tr>
-                    <th colspan="3">Small Assets</th>
-                    <th colspan="3">Large Assets</th>
-                    <th colspan="3">Complete Levels</th>
+                    <th colspan="2">Small Assets</th>
+                    <th colspan="2">Large Assets</th>
+                    <th colspan="1">Complete Levels</th>
+                </tr>
+                <tr>
+                    <td><img src="images/15package.png" height="128" width="185" /></td>
+                    <td><img src="images/45package.png" height="128" width="185" /></td>
+                    <td><img src="images/4largepackage.png" height="128" width="185" /></td>
+                    <td><img src="images/12largepackage.png" height="128" width="185" /></td>
+                    <td><img src="images/1landscapepackage.png" height="128" width="185" /></td>
+
                 </tr>
             </table>
          
