--- a/packages.htm
+++ b/packages.htm
@@ -87,7 +87,7 @@
                 </tr>
                 <tr>
                     <th><p>15 Small Assets</p></th>
-                    <th><p>4 Large Assets/p></th>
+                    <th><p>4 Large Assets</p></th>
                     <th><p>1 Complete Level</p></th>                 
                 </tr>
                 <tr>
@@ -96,14 +96,18 @@
                     <th><p>Approx. $500</p></th>
                 </tr>
                 <tr>
-
+                    <th><p></p></th>
+                    <th><p></p></th>
+                    <th><p></p></th>
+                </tr>
+                <tr>
                     <td><img src="images/45package.png" height="128" width="185" /></td>
                     <td><img src="images/12largepackage.png" height="128" width="185" /></td>
                     <td><img src="images/1landscapepackage.png" height="128" width="185" /></td>
                 </tr>
                 <tr>
                     <th><p>45 Small Assets</p></th>
-                    <th><p>12 Large Assets/p></th>
+                    <th><p>12 Large Assets</p></th>
                     <th><p>3 Complete Level</p></th>
                 </tr>
                 <tr>
