--- a/packages.htm
+++ b/packages.htm
@@ -86,14 +86,14 @@
                     <td><img src="images/1landscapepackage.png" height="128" width="185" /></td>
                 </tr>
                 <tr>
-                    <th><p>15 Small Assets</p></th>
+                    <th><p>15 Small Assets</p><p><em>Approx.</em> $300</p></th>
                     <th><p>4 Large Assets</p></th>
                     <th><p>1 Complete Level</p></th>                 
                 </tr>
                 <tr>
-                    <th><p>Approx. $300</p></th>
-                    <th><p>Approx. $300</p></th>
-                    <th><p>Approx. $500</p></th>
+                    <th><p><em>Approx.</em> $300</p></th>
+                    <th><p><em>Approx.</em> $300</p></th>
+                    <th><p><em>Approx.</em> $500</p></th>
                 </tr>
                 <tr>
                     <th><p></p></th>
@@ -111,9 +111,9 @@
                     <th><p>3 Complete Level</p></th>
                 </tr>
                 <tr>
-                    <th><p>Approx. $750</p></th>
-                    <th><p>Approx. $750</p></th>
-                    <th><p>Approx. $1,250</p></th>
+                    <th><p><em>Approx.</em> $750</p></th>
+                    <th><p><em>Approx.</em> $750</p></th>
+                    <th><p><em>Approx.</em> $1,250</p></th>
 
                 </tr>
             </table>
