--- a/packages.htm
+++ b/packages.htm
@@ -50,6 +50,8 @@
         table{
             margin-left: auto;
              margin-right: auto;
+             column-rule: thin;
+            column-gap: 30px;
             color: white;
             text-align:center;
             font-family: Verdana, Helvetica, sans-serif;
