--- a/packages.htm
+++ b/packages.htm
@@ -51,6 +51,8 @@
             margin-left: auto;
              margin-right: auto;
              column-rule: thin;
+             column-rule-color: lightblue;
+             column-width:auto;
             column-gap: 30px;
             color: white;
             text-align:center;
