--- a/packages.htm
+++ b/packages.htm
@@ -48,8 +48,8 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         table{
-            margin-left: auto;
-             margin-right: auto;
+            margin-left: 100px;
+             margin-right: 100px;
              column-rule: thin;
              column-rule-color: lightblue;
              column-width:auto;
