--- a/packages.htm
+++ b/packages.htm
@@ -48,8 +48,9 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
         table{
-            margin-left: 100px;
-             margin-right: 100px;
+            margin-left: auto;
+             margin-right: auto;
+             column-rule-style:solid;
              column-rule: thin;
              column-rule-color: lightblue;
              column-width:auto;
@@ -78,7 +79,7 @@
             Packages
         </h2>
         <hr />
-            <table>
+            <table rules ="all">
                 <tr>
                     <th colspan="1"><h2>Small Assets</h2></th>
                     <th colspan="1"><h2>Large Assets</h2></th>
