--- a/packages.htm
+++ b/packages.htm
@@ -50,10 +50,8 @@
         table{
             margin-left: auto;
              margin-right: auto;
-             column-rule-style:solid;
-             column-rule: thin;
-             column-rule-color: lightblue;
-             column-width:auto;
+            border: 2px solid;
+            border-color: lightgray;
             column-gap: 30px;
             color: white;
             text-align:center;
@@ -84,7 +82,7 @@
                     <th colspan="1"><h2>Small Assets</h2></th>
                     <th colspan="1"><h2>Large Assets</h2></th>
                     <th colspan="1"><h2>Complete Levels</h2></th>
-                </tr>
+                </tr>;
                 <tr>
                     <td><img src="images/15package.png" height="128" width="185" /></td>
                     <td><img src="images/4largepackage.png" height="128" width="185" /></td>
