--- a/packages.htm
+++ b/packages.htm
@@ -50,6 +50,8 @@
         table{
             margin-left: auto;
              margin-right: auto;
+             padding-left: 15px;
+             padding-right: 15px;
             border: 2px solid;
             border-color: lightgray;
             column-gap: 30px;
