--- a/packages.htm
+++ b/packages.htm
@@ -80,6 +80,7 @@
         </h2>
         <hr />
             <table rules ="all">
+                <caption><h2><em>Prices are only estimates.</em></h2></caption>
                 <tr>
                     <th colspan="1"><h2>Small Assets</h2></th>
                     <th colspan="1"><h2>Large Assets</h2></th>
