--- a/packages.htm
+++ b/packages.htm
@@ -80,11 +80,11 @@
         </h2>
         <hr />
             <table rules ="all">
-                <caption><h2><em>Prices are only estimates.</em></h2></caption>
+                <caption><h2 ><em>Prices are only estimates.</em></h2></caption>
                 <tr>
-                    <th colspan="1"><h2>Small Assets</h2></th>
-                    <th colspan="1"><h2>Large Assets</h2></th>
-                    <th colspan="1"><h2>Complete Levels</h2></th>
+                    <th colspan="1"><h2 margin-top ="10px">Small Assets</h2></th>
+                    <th colspan="1"><h2 margin-top ="10px">Large Assets</h2></th>
+                    <th colspan="1"><h2 margin-top ="10px">Complete Levels</h2></th>
                 </tr>;
                 <tr>
                     <td><img src="images/15package.png" height="128" width="185" /></td>
