--- a/packages.htm
+++ b/packages.htm
@@ -81,6 +81,11 @@
         <hr />
             <table rules ="all">
                 <caption><h3 ><em>Prices are only estimates.</em></h3></caption>
+                <colgroup>
+                    <col span="1" style="width: 15%;">
+                    <col span="1" style="width: 15%;">
+                    <col span="1" style="width: 15%;">
+                </colgroup>
                 <tr>
                     <th colspan="1"><h3>Small Assets</h3></th>
                     <th colspan="1"><h3>Large Assets</h3></th>
