--- a/packages.htm
+++ b/packages.htm
@@ -19,7 +19,14 @@
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
         }
+        p.picture
+        {
+            margin-top:auto;
+            margin-bottom:auto;
+            margin-right:auto;
+            margin-bottom:auto;
 
+        }
         p.minor {
             margin-top: 60px;
             margin-bottom: 25px;
@@ -82,9 +89,9 @@
             <table rules ="all">
                 <caption><h3 ><em>Prices are only estimates.</em></h3></caption>
                 <colgroup>
-                    <col span="1" style="width: 15%;">
-                    <col span="1" style="width: 15%;">
-                    <col span="1" style="width: 15%;">
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 10%;"
                 </colgroup>
                 <tr>
                     <th colspan="1"><h3>Small Assets</h3></th>
@@ -92,9 +99,9 @@
                     <th colspan="1"><h3>Complete Levels</h3></th>
                 </tr>;
                 <tr>
-                    <td><img src="images/15package.png" height="128" width="185" /></td>
-                    <td><img src="images/4largepackage.png" height="128" width="185" /></td>
-                    <td><img src="images/1landscapepackage.png" height="128" width="185" /></td>
+                    <td><p.picture><img src="images/15package.png" height="256" width="334" /></p.picture></td>
+                    <td><p.picture><img src="images/4largepackage.png" height="256" width="334" /></p.picture></td>
+                    <td><p.picture><img src="images/1landscapepackage.png" height="256" width="334" /></p.picture></td>
                 </tr>
                 <tr>
                     <th><p>15 Small Assets</p><p><em>Approx.</em> $300</p></th>
@@ -108,9 +115,9 @@
                     <th><p></p></th>
                 </tr>
                 <tr>
-                    <td><img src="images/45package.png" height="128" width="185" /></td>
-                    <td><img src="images/12largepackage.png" height="128" width="185" /></td>
-                    <td><img src="images/3landscapepackage.png" height="128" width="185" /></td>
+                    <td><p.picture><img src="images/45package.png" height="256" width="334" /></p.picture></td>
+                    <td><p.picture><img src="images/12largepackage.png" height="256" width="334" /></p.picture></td>
+                    <td><p.picture><img src="images/3landscapepackage.png" height="256" width="334" /></p.picture></td>
                 </tr>
                 <tr>
                     <th><p>45 Small Assets</p><p><em>Approx.</em> $300</p></th>
