--- a/packages.htm
+++ b/packages.htm
@@ -87,7 +87,7 @@
         </h2>
         <hr />
             <table rules ="all">
-                <caption><h3 ><em>Prices are only estimates.</em></h3></caption>
+                <caption style="font-size: small"><h3 ><em>Prices are only estimates.</em></h3></caption>
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
