--- a/packages.htm
+++ b/packages.htm
@@ -89,7 +89,7 @@
                 <colgroup>
                     <col span="1" style="width: 10%;">
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 10%;"
+                    <col span="1" style="width: 10%;">
                 </colgroup>
                 <tr>
                     <th colspan="1"><h3>Small Assets</h3></th>
