--- a/packages.htm
+++ b/packages.htm
@@ -19,12 +19,7 @@
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
         }
-        p.picture
-        {
-            margin-top:auto;
-            margin-bottom:auto;
-
-        }
+       
         p.minor {
             margin-top: 60px;
             margin-bottom: 25px;
@@ -120,7 +115,7 @@
                 <tr>
                     <th><p>45 Small Assets</p><p><em>Approx.</em> $300</p></th>
                     <th><p>12 Large Assets</p><p><em>Approx.</em> $300</p></th>
-                    <th><p>3 Complete Level</p><p><em>Approx.</em> $300</p></th>
+                    <th><p>3 Complete Levels</p><p><em>Approx.</em> $300</p></th>
                 </tr>
                
             </table>
