--- a/assets.htm
+++ b/assets.htm
@@ -24,18 +24,22 @@
             margin-top: 60px;
             margin-bottom: 25px;
         }
-         a{
+
+        a {
+            padding-left: 15px;
+            padding-right: 15px;
             color: lightgray;
             font-size: 1.2em;
         }
+
         h1 {
-             margin-top: 30px;
+            margin-top: 30px;
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
         h2 {
-             margin-top: 60px;
+            margin-top: 60px;
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
         }
@@ -43,6 +47,18 @@
         h3 {
             color: white;
             font-size: 1.5em;
+            font-family: Verdana, Helvetica, sans-serif;
+        }
+
+        table {
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 15px;
+            padding-right: 15px;
+            border: 2px solid;
+            border-color: lightgray;
+            color: white;
+            text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
         }
     </style>
@@ -56,6 +72,7 @@
     <div style="text-align:center">
         <a href="index.htm">-Home- </a>
     </div>
+
     <blockquote>
         <h1 style="text-align:center">
             Dimension Assets
@@ -63,9 +80,48 @@
         <h2 style="text-align:center">
             Assets
         </h2>
-        <p class="minor" style="text-align:center">
+        <hr />
+        <table rules="all">
+            <caption style="font-size: small"><h3><em>Prices are only estimates.</em></h3></caption>
+            <colgroup>
+                <col span="1" style="width: 20%;">
+                <col span="1" style="width: 20%;">
+                <col span="1" style="width: 20%;">
+            </colgroup>
+            <tr>
+                <th colspan="1"><h3>Small Assets</h3></th>
+                <th colspan="1"><h3>Large Assets</h3></th>
+                <th colspan="1"><h3>Complete Levels</h3></th>
+            </tr>;
+            <tr>
+                <td><p.picture><img src="images/15package.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/4largepackage.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/1landscapepackage.png" height="256" width="334" /></p.picture></td>
+            </tr>
+            <tr>
+                <th><p>15 Small Assets</p><p><em>Approx.</em> $300</p></th>
+                <th><p>4 Large Assets</p><p><em>Approx.</em> $300</p></th>
+                <th><p>1 Complete Level</p><p><em>Approx.</em> $300</p></th>
+            </tr>
 
-        </p>
+            <tr>
+                <th><p></p></th>
+                <th><p></p></th>
+                <th><p></p></th>
+            </tr>
+            <tr>
+                <td><p.picture><img src="images/45package.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/12largepackage.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/3landscapepackage.png" height="256" width="334" /></p.picture></td>
+            </tr>
+            <tr>
+                <th><p>45 Small Assets</p><p><em>Approx.</em> $300</p></th>
+                <th><p>12 Large Assets</p><p><em>Approx.</em> $300</p></th>
+                <th><p>3 Complete Levels</p><p><em>Approx.</em> $300</p></th>
+            </tr>
+
+        </table>
+
 
     </blockquote>
 </body>
