--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,8 @@
              margin-bottom: 30px;
         }
         a{
+            padding-left: 15px;
+            padding-right: 15px;
             color: lightgray;
             font-size: 1.2em;
         }
