--- a/packages.htm
+++ b/packages.htm
@@ -26,6 +26,8 @@
         }
 
         a{
+          padding-left: 15px;
+             padding-right: 15px;
             color: lightgray;
             font-size: 1.2em;
         }
