--- a/assets.htm
+++ b/assets.htm
@@ -89,19 +89,17 @@
                 <col span="1" style="width: 20%;">
             </colgroup>
             <tr>
-                <th colspan="1"><h3>Small Assets</h3></th>
-                <th colspan="1"><h3>Large Assets</h3></th>
-                <th colspan="1"><h3>Complete Levels</h3></th>
-            </tr>;
-            <tr>
                 <td><p.picture><img src="images/15package.png" height="256" width="334" /></p.picture></td>
                 <td><p.picture><img src="images/4largepackage.png" height="256" width="334" /></p.picture></td>
                 <td><p.picture><img src="images/1landscapepackage.png" height="256" width="334" /></p.picture></td>
             </tr>
             <tr>
-                <th><p>15 Small Assets</p><p><em>Approx.</em> $300</p></th>
-                <th><p>4 Large Assets</p><p><em>Approx.</em> $300</p></th>
-                <th><p>1 Complete Level</p><p><em>Approx.</em> $300</p></th>
+                <th><p>Characters</p><p><em>Approx.</em> $100</p></th>
+                <th><p>Items</p><p><em>Approx.</em> $15</p></th>
+                <th><p>Structures</p><p><em>Approx.</em> $50</p></th>
+
+               
+
             </tr>
 
             <tr>
@@ -111,13 +109,13 @@
             </tr>
             <tr>
                 <td><p.picture><img src="images/45package.png" height="256" width="334" /></p.picture></td>
-                <td><p.picture><img src="images/12largepackage.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/skybox.jpg" height="256" width="334" /></p.picture></td>
                 <td><p.picture><img src="images/3landscapepackage.png" height="256" width="334" /></p.picture></td>
             </tr>
             <tr>
-                <th><p>45 Small Assets</p><p><em>Approx.</em> $300</p></th>
-                <th><p>12 Large Assets</p><p><em>Approx.</em> $300</p></th>
-                <th><p>3 Complete Levels</p><p><em>Approx.</em> $300</p></th>
+                <th><p>Landscapes</p><p><em>Approx.</em> $100</p></th>
+                <th><p>Skyboxes</p><p><em>Approx.</em> $15</p></th>
+                <th><p>Textures</p><p><em>Approx.</em> $10</p></th>
             </tr>
 
         </table>
