--- a/assets.htm
+++ b/assets.htm
@@ -89,9 +89,9 @@
                 <col span="1" style="width: 20%;">
             </colgroup>
             <tr>
-                <td><p.picture><img src="images/15package.png" height="256" width="334" /></p.picture></td>
-                <td><p.picture><img src="images/4largepackage.png" height="256" width="334" /></p.picture></td>
-                <td><p.picture><img src="images/1landscapepackage.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/15package.png" height="340" width="508" /></p.picture></td>
+                <td><p.picture><img src="images/item.jpg" height="340" width="508" /></p.picture></td>
+                <td><p.picture><img src="images/structure.png" height="340" width="508" /></p.picture></td>
             </tr>
             <tr>
                 <th><p>Characters</p><p><em>Approx.</em> $100</p></th>
@@ -108,9 +108,9 @@
                 <th><p></p></th>
             </tr>
             <tr>
-                <td><p.picture><img src="images/45package.png" height="256" width="334" /></p.picture></td>
-                <td><p.picture><img src="images/skybox.jpg" height="256" width="334" /></p.picture></td>
-                <td><p.picture><img src="images/3landscapepackage.png" height="256" width="334" /></p.picture></td>
+                <td><p.picture><img src="images/landscape.jpg" height="340" width="508" /></p.picture></td>
+                <td><p.picture><img src="images/skybox.jpg" height="340" width="508" /></p.picture></td>
+                <td><p.picture><img src="images/texture.jpg" height="340" width="508" /></p.picture></td>
             </tr>
             <tr>
                 <th><p>Landscapes</p><p><em>Approx.</em> $100</p></th>
