--- a/assets.htm
+++ b/assets.htm
@@ -91,7 +91,7 @@
             <tr>
                 <td><p.picture><img src="images/15package.png" height="340" width="508" /></p.picture></td>
                 <td><p.picture><img src="images/item.jpg" height="340" width="508" /></p.picture></td>
-                <td><p.picture><img src="images/structure.png" height="340" width="508" /></p.picture></td>
+                <td><p.picture><img src="images/structure.jpg" height="340" width="508" /></p.picture></td>
             </tr>
             <tr>
                 <th><p>Characters</p><p><em>Approx.</em> $100</p></th>
