--- a/assets.htm
+++ b/assets.htm
@@ -89,7 +89,7 @@
                 <col span="1" style="width: 20%;">
             </colgroup>
             <tr>
-                <td><p.picture><img src="images/15package.png" height="340" width="508" /></p.picture></td>
+                <td><p.picture><img src="images/character.jpg" height="340" width="508" /></p.picture></td>
                 <td><p.picture><img src="images/item.jpg" height="340" width="508" /></p.picture></td>
                 <td><p.picture><img src="images/structure.jpg" height="340" width="508" /></p.picture></td>
             </tr>
