--- a/assets.htm
+++ b/assets.htm
@@ -94,9 +94,9 @@
                 <td><p.picture><img src="images/structure.jpg" height="255" width="381" /></p.picture></td>
             </tr>
             <tr>
-                <th><p>Characters</p><p><em>Approx.</em> $100</p></th>
-                <th><p>Items</p><p><em>Approx.</em> $15</p></th>
-                <th><p>Structures</p><p><em>Approx.</em> $50</p></th>
+                <th><h3>Characters</h3><p><em>Approx.</em> $100</p></th>
+                <th><h3>Items</h3><p><em>Approx.</em> $15</p></th>
+                <th><h3>Structures</h3><p><em>Approx.</em> $50</p></th>
 
                
 
@@ -113,9 +113,9 @@
                 <td><p.picture><img src="images/texture.jpg" height="255" width="381" /></p.picture></td>
             </tr>
             <tr>
-                <th><p>Landscapes</p><p><em>Approx.</em> $100</p></th>
-                <th><p>Skyboxes</p><p><em>Approx.</em> $15</p></th>
-                <th><p>Textures</p><p><em>Approx.</em> $10</p></th>
+                <th><h3>Landscapes</h3><p><em>Approx.</em> $100</p></th>
+                <th><h3>Skyboxes</h3><p><em>Approx.</em> $15</p></th>
+                <th><h3>Textures</h3><p><em>Approx.</em> $10</p></th>
             </tr>
 
         </table>
