--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
             padding-left: 15px;
             padding-right: 15px;
             color: lightgray;
-            font-size: 1.2em;
+            font-size: small;
         }
         h1{
             color:white;
