--- a/assets.htm
+++ b/assets.htm
@@ -29,7 +29,7 @@
             padding-left: 15px;
             padding-right: 15px;
             color: lightgray;
-            font-size: 1.2em;
+            font-size: small;
         }
 
         h1 {
@@ -46,7 +46,7 @@
 
         h3 {
             color: white;
-            font-size: 1.5em;
+            font-size: medium;
             font-family: Verdana, Helvetica, sans-serif;
         }
 
