--- a/packages.htm
+++ b/packages.htm
@@ -29,7 +29,7 @@
           padding-left: 15px;
              padding-right: 15px;
             color: lightgray;
-            font-size: small;
+            font-size: medium;
         }
         h1 {
              margin-top: 30px;
