--- a/assets.htm
+++ b/assets.htm
@@ -56,7 +56,7 @@
             padding-left: 15px;
             padding-right: 15px;
             border: 2px solid;
-            border-color: lightgray;
+            border-color: gray;
             color: white;
             text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
