--- a/assets.htm
+++ b/assets.htm
@@ -57,6 +57,7 @@
             padding-right: 15px;
             border: 2px solid;
             border-color: gray;
+            border-width:thick;
             color: white;
             text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
@@ -102,11 +103,7 @@
 
             </tr>
 
-            <tr>
-                <th><p></p></th>
-                <th><p></p></th>
-                <th><p></p></th>
-            </tr>
+        
             <tr>
                 <td><p.picture><img src="images/landscape.jpg" height="255" width="381" /></p.picture></td>
                 <td><p.picture><img src="images/skybox.jpg" height="255" width="381" /></p.picture></td>
