--- a/packages.htm
+++ b/packages.htm
@@ -56,6 +56,7 @@
              padding-right: 15px;
             border: 2px solid;
             border-color: gray;
+            border-width:thick;
             color: white;
             text-align:center;
             font-family: Verdana, Helvetica, sans-serif;
@@ -103,11 +104,7 @@
                     <th><p>1 Complete Level</p><p><em>Approx.</em> $300</p></th>                 
                 </tr>
                 
-                <tr>
-                    <th><p></p></th>
-                    <th><p></p></th>
-                    <th><p></p></th>
-                </tr>
+               
                 <tr>
                     <td><p.picture><img src="images/45package.png" height="256" width="334" /></p.picture></td>
                     <td><p.picture><img src="images/12largepackage.png" height="256" width="334" /></p.picture></td>
