--- a/assets.htm
+++ b/assets.htm
@@ -58,6 +58,7 @@
             border: 2px solid;
             border-color: gray;
             border-width:thick;
+            column-rule-width:medium;
             color: white;
             text-align: center;
             font-family: Verdana, Helvetica, sans-serif;
@@ -81,7 +82,7 @@
         <h2 style="text-align:center">
             Assets
         </h2>
-        <hr />
+      
         <table rules="all">
             <caption style="font-size: small"><h3><em>Prices are only estimates.</em></h3></caption>
             <colgroup>
