--- a/packages.htm
+++ b/packages.htm
@@ -38,9 +38,9 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
           h2 {
-               margin-top: 60px;
+            margin-top: 60px;
+            margin-bottom: 30px;
             color: white;
-           
             font-family: Verdana, Helvetica, sans-serif;
         }
 
