--- a/packages.htm
+++ b/packages.htm
@@ -89,7 +89,7 @@
                     <col span="1" style="width: 20%;">
                     <col span="1" style="width: 20%;">
                 </colgroup>
-                <tr style="font-size: large">
+                <tr style="font-size: larger">
                     <th colspan="1"><h3>Small Assets</h3></th>
                     <th colspan="1"><h3>Large Assets</h3></th>
                     <th colspan="1"><h3>Complete Levels</h3></th>
