--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,7 @@
             padding-right: 15px;
             color: lightgray;
             font-size: large;
+             font-family: Verdana, Helvetica, sans-serif;
         }
         h1{
             color:white;
@@ -48,8 +49,9 @@
 
 <body>
     <div style="text-align:center">
-        <a href="assets.htm">-Assets- </a>
-        <a href="packages.htm">-Packages- </a>
+        <a href="assets.htm">Assets </a>
+        <a href="packages.htm">Packages </a>
+        <a href="packages.htm">Contact </a>
     </div>
     
     <blockquote>
