--- a/packages.htm
+++ b/packages.htm
@@ -30,6 +30,7 @@
              padding-right: 15px;
             color: lightgray;
             font-size: large;
+             font-family: Verdana, Helvetica, sans-serif;
         }
         h1 {
              margin-top: 30px;
