--- a/contact.htm
+++ b/contact.htm
@@ -74,7 +74,7 @@
 
 <body>
     <div style="text-align:center">
-        <a href="index.htm">-Home- </a>
+        <a href="index.htm">Home</a>
     </div>
 
     <blockquote>
