--- a/index.htm
+++ b/index.htm
@@ -49,9 +49,9 @@
 
 <body>
     <div style="text-align:center">
-        <a href="assets.htm">Assets </a>
-        <a href="packages.htm">Packages </a>
-        <a href="packages.htm">Contact </a>
+        <a href="assets.htm">Assets</a>
+        <a href="packages.htm">Packages</a>
+        <a href="contact.htm">Contact </a>
     </div>
     
     <blockquote>
