--- a/contact.htm
+++ b/contact.htm
@@ -23,6 +23,9 @@
         p.minor {
             margin-top: 60px;
             margin-bottom: 25px;
+             font-size: medium;
+            color: white;
+            font-family: Verdana, Helvetica, sans-serif;
         }
 
         a {
@@ -85,5 +88,11 @@
             Contact
         </h2>
     </blockquote>
+    <hr/>
+    <p class="minor" style="align-content:center">
+        If you have any questions regarding our assets and asset packages, <br/>
+        or need a price qoute for your project, please submit the form below.
+    </p>
+    <hr/>
 </body>
 </html>
