--- a/contact.htm
+++ b/contact.htm
@@ -21,8 +21,8 @@
         }
 
         p.minor {
-            margin-top: 60px;
-            margin-bottom: 25px;
+            margin-top: 10px;
+            margin-bottom: 10px;
              font-size: medium;
             color: white;
             font-family: Verdana, Helvetica, sans-serif;
@@ -89,7 +89,7 @@
         </h2>
     </blockquote>
     <hr/>
-    <p class="minor" style="align-content:center">
+    <p class="minor" style="text-align:center">
         If you have any questions regarding our assets and asset packages, <br/>
         or need a price qoute for your project, please submit the form below.
     </p>
