--- a/contact.htm
+++ b/contact.htm
@@ -89,10 +89,10 @@
         </h2>
     </blockquote>
     <hr/>
-    <p class="minor" style="text-align:center">
+    <h3 style="text-align:center">
         If you have any questions regarding our assets and asset packages, <br/>
         or need a price qoute for your project, please submit the form below.
-    </p>
+    </h3>
     <hr/>
 </body>
 </html>
