--- a/contact.htm
+++ b/contact.htm
@@ -90,7 +90,7 @@
     </blockquote>
     <hr/>
     <h3 style="text-align:center">
-        If you have any questions regarding our assets and asset packages, <br/>
+        If you have any questions regarding our assets, asset packages, <br/>
         or need a price qoute for your project, please submit the form below.
     </h3>
     <hr/>
