--- a/contact.htm
+++ b/contact.htm
@@ -90,8 +90,8 @@
     </blockquote>
     <hr/>
     <h3 style="text-align:center">
-        If you have any questions regarding our assets, asset packages, <br/>
-        or need a price qoute for your project, please submit the form below.
+        If you have any questions regarding your order, assets, asset packages, <br/>
+        or you need a price qoute for your project, please submit the form below.
     </h3>
     <hr/>
 </body>
