--- a/contact.htm
+++ b/contact.htm
@@ -91,7 +91,8 @@
     <hr/>
     <h3 style="text-align:center">
         If you have any questions regarding your order, assets, asset packages, <br/>
-        or you need a price qoute for your project, please submit the form below.
+        or you need a price qoute for your project, please submit the form below.<br />
+        We will contact you as soon as possible.
     </h3>
     <hr/>
 </body>
