--- a/contact.htm
+++ b/contact.htm
@@ -55,7 +55,7 @@
             font-family: Verdana, Helvetica, sans-serif;
         }
 
-        table {
+        form {
             margin-left: auto;
             margin-right: auto;
             padding-left: 15px;
@@ -95,5 +95,10 @@
         We will contact you as soon as possible.
     </h3>
     <hr/>
+    <form action= "">
+        <h3 style="text-align:left">
+           <input type="text" name="firstName" size="25"/>
+        </h3>
+    </form>
 </body>
 </html>
