--- a/contact.htm
+++ b/contact.htm
@@ -97,7 +97,17 @@
     <hr/>
     <form action= "">
         <h3 style="text-align:left">
-           <input type="text" name="firstName" size="25"/>
+            <label> First Name:
+                <input type="text" name="firstName" size="25" />
+            </label>
+            <label>
+                Last Name:
+                <input type="text" name="lastName" size="25" />
+            </label>
+            <label>
+                Email:
+                <input type="email" name="email" size="50" />
+            </label>
         </h3>
     </form>
 </body>
