--- a/contact.htm
+++ b/contact.htm
@@ -96,7 +96,7 @@
     </h3>
     <hr/>
     <form action= "">
-        <h3 style="text-align:left">
+        <h3 style="text-align:center">
             <label> First Name:
                 <input type="text" name="firstName" size="25" />
             </label>
